--- a/sections/small-banner.liquid
+++ b/sections/small-banner.liquid
@@ -8,6 +8,8 @@
 {% schema %}
 {
   "name": "small-banner",
+  "tag": "section",
+  "class": "section",
   "settings": [
     {
       "type": "image_picker",
@@ -18,6 +20,12 @@
       "type": "image_picker",
       "id": "small_banner_02",
       "label": "Small Banner 02"
+    }
+  ],
+  "presets": [
+    {
+      "category": "Image",
+      "name": "small-banner"
     }
   ]
 }
