--- a/sections/small-banner.liquid
+++ b/sections/small-banner.liquid
@@ -1,6 +1,6 @@
 <!-- Add init="false" -->
 
-<ul style="padding:0">
+<ul style="padding:0" style="height:300px">
   <li><img src="{{section.settings.small_banner_01 | img_url: 'master'}}"></li>
   <li><img src="{{section.settings.small_banner_02 | img_url: 'master'}}"></li>
 </ul>
