--- a/sections/test-slide.liquid
+++ b/sections/test-slide.liquid
@@ -1,39 +1,50 @@
 <!-- Add init="false" -->
 
-<swiper-container init="false" class="swiper-container-mobile">
+<swiper-container init="false" class="swiper-container-mobile" style="height:300px">
   {% for block in section.blocks %}
-    <swiper-slide id="Slide{{block.id}}">
-      <a href="">
-        {% if mobie_image %}
-          <img
-            class=""
-            src="{{ block.settings.mobile_image | img_url: 'master'}}"
-            width="100%"
-          >
-        {% endif %}
-        {% if block.settings.desktop_image %}
-          <img
-            class=""
-            src="{{ block.settings.desktop_image | img_url: 'master'}}"
-            width="100%"
-          >
-        {% endif %}
-      </a>
-    </swiper-slide>
+    {% if mobie_image %}
+      <swiper-slide>
+        {{ block.settings.mobile_image | image_url: width: 3840 | image_tag: loading: 'lazy' }}
+      </swiper-slide>
+    {% endif %}
+    {% if block.settings.desktop_image %}
+      <swiper-slide>
+        {{ block.settings.desktop_image | image_url: width: 3840 | image_tag: loading: 'lazy' }}
+      </swiper-slide>
+    {% else %}
+      <swiper-slide>
+        <div
+          class="banner__media media{% if section.settings.image == blank and section.settings.desktop_image == blank %} placeholder{% endif %}{% if section.settings.image_2 != blank %} banner__media-half{% endif %}{% if section.settings.image_behavior != 'none' %} animate--{{ section.settings.image_behavior }}{% endif %}"
+        >
+          {{ 'lifestyle-2' | placeholder_svg_tag: 'placeholder-svg' }}
+        </div>
+      </swiper-slide>
+    {% endif %}
   {% endfor %}
 </swiper-container>
 <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-element-bundle.min.js"></script>
 {% schema %}
 {
   "name": "test-slide",
+  "tag": "section",
+  "class": "section",
   "disabled_on": {
     "groups": ["header", "footer"]
   },
-  "settings": [],
+  "settings": [
+    {
+      "type": "checkbox",
+      "id": "show_fullscreen",
+      "label": "Show full-screen image",
+      "info": "If enabled, images will be resized to fit the entire screen.",
+      "default": true
+    }
+  ],
+  "max_blocks": 5,
   "blocks": [
     {
       "type": "image",
-      "name": "slide",
+      "name": "Slide",
       "settings": [
         {
           "type": "image_picker",
@@ -63,7 +74,16 @@
   "presets": [
     {
       "category": "Image",
-      "name": "test-slide"
+      "name": "test-slide",
+      "settings": {},
+      "blocks": [
+        {
+          "type": "image"
+        },
+        {
+          "type": "image"
+        }
+      ]
     }
   ]
 }
